--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>hackersweek6</groupId>
+    <groupId>deors.training</groupId>
     <artifactId>workshop-pipelines</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
