--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.5.RELEASE</version>
+        <version>2.3.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -27,16 +27,16 @@
 
         <java.version>11</java.version>
 
-        <junit.version>5.3.2</junit.version>
-        <jmockit.version>1.45</jmockit.version>
-        <jacoco.version>0.8.3</jacoco.version>
-        <sonarjava.version>5.10.2.17019</sonarjava.version>
+        <junit.version>5.6.2</junit.version>
+        <jmockit.version>1.49</jmockit.version>
+        <jacoco.version>0.8.5</jacoco.version>
         <selenium.version>3.141.59</selenium.version>
-        <selenium-htmlunit.version>2.33.3</selenium-htmlunit.version>
-        <pitest.version>1.4.5</pitest.version>
-        <pitest-junit5.version>0.8</pitest-junit5.version>
-        <jmeter.version>2.9.0</jmeter.version>
-        <dependency-check.version>5.0.0-M3</dependency-check.version>
+        <selenium-htmlunit.version>2.36.0</selenium-htmlunit.version>
+        <pitest.version>1.5.2</pitest.version>
+        <pitest-junit5.version>0.11</pitest-junit5.version>
+        <jmeter-plugin.version>3.0.0</jmeter-plugin.version>
+        <jmeter.version>5.2.1</jmeter.version>
+        <dependency-check.version>5.3.2</dependency-check.version>
 
         <jmockit.path>${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar</jmockit.path>
         <jmockit.agentConfig>-javaagent:${jmockit.path}</jmockit.agentConfig>
@@ -47,13 +47,10 @@
         <jacoco.utAgentConfig>-javaagent:${jacoco.path}=destfile=${jacoco.utReport}</jacoco.utAgentConfig>
         <jacoco.itAgentConfig>-javaagent:${jacoco.path}=destfile=${jacoco.itReport}</jacoco.itAgentConfig>
 
-        <compiler.version>3.8.0</compiler.version>
-        <surefire.version>2.22.1</surefire.version>
-        <failsafe.version>2.22.1</failsafe.version>
+        <compiler.version>3.8.1</compiler.version>
+        <surefire.version>2.22.2</surefire.version>
+        <failsafe.version>2.22.2</failsafe.version>
         <dependency.version>3.1.1</dependency.version>
-
-        <spotify-docker.version>1.2.0</spotify-docker.version>
-        <docker.image.prefix>deors</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -115,12 +112,6 @@
             <classifier>runtime</classifier>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.sonarsource.java</groupId>
-            <artifactId>sonar-jacoco-listeners</artifactId>
-            <version>${sonarjava.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -166,22 +157,6 @@
                 </executions>
             </plugin>
 
-            <!-- integrate Docker in lifecycle -->
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>${spotify-docker.version}</version>
-                <configuration>
-                    <dockerDirectory>${project.basedir}</dockerDirectory>
-                    <imageName>${docker.image.prefix}/${project.name}</imageName>
-                    <imageTags>
-                        <imageTag>${project.version}</imageTag>
-                        <imageTag>latest</imageTag>
-                    </imageTags>
-                    <serverId>docker-hub</serverId>
-                </configuration>
-            </plugin>
-
             <!-- unit tests (with mocking and code coverage agents enabled) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -192,14 +167,6 @@
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
                     </excludes>
-                    <properties>
-                        <!-- add SonarQube's JaCoCo listener to enable -->
-                        <!-- gathering of code coverage metrics per test -->
-                        <property>
-                            <name>listener</name>
-                            <value>org.sonar.java.jacoco.JUnitListener</value>
-                        </property>
-                    </properties>
                 </configuration>
             </plugin>
 
@@ -265,7 +232,7 @@
             <plugin>
                 <groupId>com.lazerycode.jmeter</groupId>
                 <artifactId>jmeter-maven-plugin</artifactId>
-                <version>${jmeter.version}</version>
+                <version>${jmeter-plugin.version}</version>
                 <configuration>
                     <testResultsTimestamp>false</testResultsTimestamp>
                     <propertiesUser>
@@ -274,16 +241,23 @@
                         <root>${jmeter.target.root}</root>
                     </propertiesUser>
                 </configuration>
-                <!-- if activated, will run jmeter automatically on integration-test and verify goals -->
-                <!-- <executions>
+                <executions>
                     <execution>
+                        <id>configuration</id>
+                        <goals>
+                            <goal>configure</goal>
+                        </goals>
+                    </execution>
+                <!-- if activated, jmeter will run automatically on integration-test and verify goals -->
+                    <!--<execution>
                         <phase>integration-test</phase>
                         <goals>
+                            <goal>configure</goal>
                             <goal>jmeter</goal>
                             <goal>results</goal>
                         </goals>
-                    </execution>
-                </executions> -->
+                    </execution>-->
+                </executions>
             </plugin>
 
             <!-- dependency vulnerability tests -->
