--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,14 @@
                         <root>${jmeter.target.root}</root>
                     </propertiesUser>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>configuration</id>
+                        <goals>
+                            <goal>configure</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- dependency vulnerability scan -->
