--- a/pom.xml
+++ b/pom.xml
@@ -28,36 +28,12 @@
         <java.version>17</java.version>
 
         <junit.version>5.8.2</junit.version> <!-- provided by spring-boot-starter-test pom -->
-        <jmockit.version>1.49</jmockit.version>
-        <jacoco.version>0.8.8</jacoco.version>
         <selenium.version>4.2.0</selenium.version>
         <selenium-htmlunit.version>3.61.0</selenium-htmlunit.version>
-        <pitest.version>1.8.0</pitest.version>
-        <pitest-junit5.version>0.14</pitest-junit5.version>
-        <jmeter-plugin.version>3.5.0</jmeter-plugin.version>
-        <jmeter.version>5.4.3</jmeter.version>
-        <dependency-check.version>5.3.2</dependency-check.version>
-
-        <jmockit.path>${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar</jmockit.path>
-        <jmockit.agentConfig>-javaagent:${jmockit.path}</jmockit.agentConfig>
-
-        <jacoco.path>${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar</jacoco.path>
-        <jacoco.utReport>${project.build.directory}/jacoco.exec</jacoco.utReport>
-        <jacoco.itReport>${project.build.directory}/jacoco-it.exec</jacoco.itReport>
-        <jacoco.utAgentConfig>-javaagent:${jacoco.path}=destfile=${jacoco.utReport}</jacoco.utAgentConfig>
-        <jacoco.itAgentConfig>-javaagent:${jacoco.path}=destfile=${jacoco.itReport}</jacoco.itAgentConfig>
-
-        <jmeter.target.host>localhost</jmeter.target.host>
-        <jmeter.target.port>8080</jmeter.target.port>
-        <jmeter.target.root>/</jmeter.target.root>
 
         <compiler.version>3.8.1</compiler.version>
         <surefire.version>2.22.2</surefire.version>
         <failsafe.version>2.22.2</failsafe.version>
-        <dependency.version>3.1.1</dependency.version>
-
-        <spotify-docker.version>1.2.0</spotify-docker.version>
-        <docker.image.prefix>deors</docker.image.prefix>
      </properties>
 
     <dependencies>
@@ -76,12 +52,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.jmockit</groupId>
-            <artifactId>jmockit</artifactId>
-            <version>${jmockit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>${selenium.version}</version>
@@ -91,13 +61,6 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>htmlunit-driver</artifactId>
             <version>${selenium-htmlunit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jacoco</groupId>
-            <artifactId>org.jacoco.agent</artifactId>
-            <version>${jacoco.version}</version>
-            <classifier>runtime</classifier>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -111,63 +74,12 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!-- copy JaCoCo dependencies to include them in the Docker image
-                 and to collect code coverage metrics during integration tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>${dependency.version}</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.jacoco</groupId>
-                                    <artifactId>org.jacoco.agent</artifactId>
-                                    <version>${jacoco.version}</version>
-                                    <classifier>runtime</classifier>
-                                    <destFileName>jacocoagent.jar</destFileName>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>org.jacoco</groupId>
-                                    <artifactId>org.jacoco.cli</artifactId>
-                                    <version>${jacoco.version}</version>
-                                    <classifier>nodeps</classifier>
-                                    <destFileName>jacococli.jar</destFileName>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- integrate Docker in lifecycle (build, tag, push) -->
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>${spotify-docker.version}</version>
-                <configuration>
-                    <dockerDirectory>${project.basedir}</dockerDirectory>
-                    <imageName>${docker.image.prefix}/${project.name}</imageName>
-                    <imageTags>
-                        <imageTag>${project.version}</imageTag>
-                        <imageTag>latest</imageTag>
-                    </imageTags>
-                    <serverId>docker-hub</serverId>
-                </configuration>
-            </plugin>
-
-            <!-- unit tests (with mocking and code coverage agents enabled) -->
+            <!-- unit tests (with mocking agent enabled) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
-                    <argLine>${jmockit.agentConfig} ${jacoco.utAgentConfig}</argLine>
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
                     </excludes>
@@ -180,63 +92,9 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${failsafe.version}</version>
                 <configuration>
-                    <!-- JaCoCo must be enabled on target app container to gather coverage
-                         for integration tests, e.g. UI tests and API tests -->
                     <includes>
                         <include>**/*IntegrationTest.java</include>
                     </includes>
-                </configuration>
-            </plugin>
-
-            <!-- mutation tests (with mocking agent enabled) -->
-            <plugin>
-                <groupId>org.pitest</groupId>
-                <artifactId>pitest-maven</artifactId>
-                <version>${pitest.version}</version>
-                <configuration>
-                    <jvmArgs>
-                        <value>${jmockit.agentConfig}</value>
-                    </jvmArgs>
-                    <excludedTestClasses>
-                        <param>*ApplicationTest</param>
-                        <param>*IntegrationTest</param>
-                    </excludedTestClasses>
-                    <outputFormats>
-                        <outputFormat>XML</outputFormat>
-                    </outputFormats>
-                </configuration>
-                <!-- enable support for JUnit 5 in Pitest -->
-                <dependencies>
-                    <dependency>
-                        <groupId>org.pitest</groupId>
-                        <artifactId>pitest-junit5-plugin</artifactId>
-                        <version>${pitest-junit5.version}</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
-            <!-- performance tests -->
-            <plugin>
-                <groupId>com.lazerycode.jmeter</groupId>
-                <artifactId>jmeter-maven-plugin</artifactId>
-                <version>${jmeter-plugin.version}</version>
-                <configuration>
-                    <testResultsTimestamp>false</testResultsTimestamp>
-                    <propertiesUser>
-                        <host>${jmeter.target.host}</host>
-                        <port>${jmeter.target.port}</port>
-                        <root>${jmeter.target.root}</root>
-                    </propertiesUser>
-                </configuration>
-            </plugin>
-
-            <!-- dependency vulnerability scan -->
-            <plugin>
-                <groupId>org.owasp</groupId>
-                <artifactId>dependency-check-maven</artifactId>
-                <version>${dependency-check.version}</version>
-                <configuration>
-                    <format>ALL</format>
                 </configuration>
             </plugin>
         </plugins>
