--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,8 +4,8 @@ metadata:
   name: workshop-pipelines
   description: Workshop on Jenkins CI/CD pipelines
   tags:
-    - DevOps
-    - Jenkins
+    - devops
+    - jenkins
   links:
     - url: https://github.com/deors/workshop-pipelines
       title: Workshop Pipelines
