--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>deors.training</groupId>
-    <artifactId>workshop-pipelines</artifactId>
+    <groupId>deors.demos</groupId>
+    <artifactId>deors-demos-java-pipeline</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>workshop-pipelines</name>
-    <description>Java + Maven + Spring Boot application to be used as an example
-                 for the workshop on Jenkins CI/CD pipelines.</description>
+    <name>deors-demos-java-pipeline</name>
+    <description>An exemplar CI/CD pipeline for Java + Maven + Spring Boot powered
+                 by Jenkins, Podman, Docker and Kubernetes</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
